flux/clusters/talos/apps/rag-system/alist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alist
  namespace: alist
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5244
      protocol: TCP
      name: http
  selector:
    app: alist
